--- a/site/css/stylesheet.css
+++ b/site/css/stylesheet.css
@@ -50,3 +50,14 @@ a:hover {color: lightgray;}
     width: 100%;
     height: 50px;
 }
+
+<!-- -->
+
+#framsidans-logo1{
+    width: 800px;
+    height: 350px;
+    background-color: darkred;
+}
+#white-paragraph{
+    color: white;
+}
