--- a/site/css/stylesheet.css
+++ b/site/css/stylesheet.css
@@ -29,21 +29,20 @@ a:hover {color: lightgray;}
     height: 20px;
 
 }
-#item{
+#your-page {
     background-color: white;
     width: 100%;
     height: 150px;
     margin-bottom: 1px;
     
 }
-#item-pic {
+#your-page-pic {
     width: 140px;
     height: 140px;
     background-color: gray;
     margin-top: 5px;
     float: left;
     margin-left: 5px;
-
 }
 
 #under-menu-bottom{
@@ -61,3 +60,28 @@ a:hover {color: lightgray;}
 #white-paragraph{
     color: white;
 }
+
+#item {
+    background-color: white;
+    width: 100%;
+    height: 150px;
+    margin-bottom: 1px;
+
+}
+#item-pic {
+    width: 140px;
+    height: 140px;
+    background-color: gray;
+    margin-top: 5px;
+    float: left;
+    margin-left: 5px;
+}
+
+#store-pic {
+     width: 140px;
+     height: 140px;
+     background-color: gray;
+     margin-top: 5px;
+     float: left;
+     margin-left: 5px;
+ }
