--- a/site/css/stylesheet.css
+++ b/site/css/stylesheet.css
@@ -1,5 +1,6 @@
+/* allt */
 body{
-    background-color: whitesmoke;
+    background-color: white;
 }
 
 a:link {color: black;}
@@ -7,7 +8,7 @@ a:visited {color: black;}
 a:hover {color: lightgray;}
 
 #content{
-    background-color: darkslategray;
+    background-color: white;
     width: 90%;
     height: 100%;
     margin: auto;
@@ -15,13 +16,16 @@ a:hover {color: lightgray;}
 #menu{
     width: 80%;
     height: 100px;
-    background-color: red;
+    background-color: skyblue;
     margin: auto;
+    border-style: solid;
+    border-color: black;
+    border-radius: 10px;
+    border-width: 4px;
 }
 #under-menu{
     width: 800px;
     height: 100%;
-    background-color: black;
     margin: auto;
 }
 #under-menu-top{
@@ -29,11 +33,17 @@ a:hover {color: lightgray;}
     height: 20px;
 
 }
+/* allt-slut */
+/* home */
 #your-page {
-    background-color: white;
+    background-color: skyblue;
     width: 100%;
     height: 150px;
-    margin-bottom: 1px;
+    margin-bottom: 6px;
+    border-style: solid;
+    border-color: black;
+    border-radius: 10px;
+    border-width: 4px;
     
 }
 #your-page-pic {
@@ -50,22 +60,37 @@ a:hover {color: lightgray;}
     height: 50px;
 }
 
-<!-- -->
-
 #framsidans-logo1{
     width: 800px;
     height: 350px;
     background-color: darkred;
+    border-style: solid;
+    border-color: black;
+    border-radius: 10px;
+    border-width: 4px;
 }
 #white-paragraph{
     color: white;
+    background-color: orange;
+    border-style: solid;
+    border-color: black;
+    border-radius: 10px;
+    border-width: 4px;
 }
-
+#white-paragraph p{
+    background-color: black;
+    color: black;
+}
+/* home-slut */
 #item {
-    background-color: white;
+    background-color: orange;
     width: 100%;
     height: 150px;
     margin-bottom: 1px;
+    border-style: solid;
+    border-color: black;
+    border-radius: 10px;
+    border-width: 4px;
 
 }
 #item-pic {
@@ -85,3 +110,89 @@ a:hover {color: lightgray;}
      float: left;
      margin-left: 5px;
  }
+#store{
+    width: 800px;
+    height: 350px;
+    background-color: orange;
+    border-style: solid;
+    border-color: black;
+    border-radius: 10px;
+    border-width: 4px;
+}
+#footer-wrapper {
+
+    background: url(images/footer_bg.png) repeat-x center top;
+
+    width: 100%;
+
+    height: 335px;
+
+    padding: 0px;
+
+    margin: 0px;
+
+    text-align: center;
+
+    clear: both;
+
+    color: #fff;
+
+}
+
+/* footer */
+#footer {
+
+    background: url(images/footer.png) no-repeat center top;
+
+    width: 960px;
+
+    height: 335px;
+
+    padding: 0px;
+
+    margin: 0px auto;
+
+    text-align: center;
+
+    clear: both;
+
+}
+
+#footer_p {
+
+    background: url(images/footer_port.png) no-repeat center top;
+
+    width: 960px;
+
+    height: 335px;
+
+    padding: 0px;
+
+    margin: 0px auto;
+
+    text-align: center;
+
+    clear: both;
+
+}
+
+#footer-wrapper p {
+
+    margin: 0px;
+
+    padding: 10px 0px;
+
+}
+
+#footer-wrapper a {
+
+    color: #fff199!important;
+
+}
+
+#footer-text {
+    margin: 0px;
+    padding: 280px 0px 0px 0px;
+}
+
+/* footer-end */
