--- a/site/css/stylesheet.css
+++ b/site/css/stylesheet.css
@@ -69,6 +69,24 @@ a:hover {color: lightgray;}
     border-radius: 10px;
     border-width: 4px;
 }
+#framsidans-logo2{
+    width: 800px;
+    height: 500px;
+    border-style: solid;
+    border-color: black;
+    border-radius: 10px;
+    border-width: 4px;
+}
+#Ring-oss{
+    Width: 100px;
+    height: 50px;
+}
+#Kontakta-oss-text{
+    width: 200px;
+    height: 50px;
+    margin-left: 270px;
+
+}
 #white-paragraph{
     color: white;
     background-color: orange;
