--- a/site/css/stylesheet.css
+++ b/site/css/stylesheet.css
@@ -1,6 +1,6 @@
 /* allt */
 body{
-    background-color: white;
+    background-color: lightgray;
 }
 
 a:link {color: black;}
@@ -8,7 +8,7 @@ a:visited {color: black;}
 a:hover {color: lightgray;}
 
 #content{
-    background-color: white;
+    background-color: lightgray;
     width: 90%;
     height: 100%;
     margin: auto;
@@ -22,6 +22,8 @@ a:hover {color: lightgray;}
     border-color: black;
     border-radius: 10px;
     border-width: 4px;
+}
+#menu-canvas{
 }
 #under-menu{
     width: 800px;
