--- a/site21/css/bootstrap.css
+++ b/site21/css/bootstrap.css
@@ -1120,10 +1120,12 @@ img {
 .thumbnail > img,
 .thumbnail a > img,
 .carousel-inner > .item > img,
-.carousel-inner > .item > a > img {
+.carousel-inner .img-responsive > .item > a > img {
   display: block;
   max-width: 100%;
   height: auto;
+  margin: 0 auto;
+
 }
 .img-rounded {
   border-radius: 6px;
